[project]
name = "viceualize"
version = "0.1.1"
description = "Visualizing my vices."
authors = [
    {name = "Daethyra",email = "109057945+Daethyra@users.noreply.github.com"}
]
license = {text = "{file = \"LICENSE\"}"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "plotly (>=6.0.0,<7.0.0)",
    "odfpy (>=1.4.1,<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.1.2"

